--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ html, body {
     /* padding-left: 120px; */
 }
 
+#about-section {
+    background-color: rgb(24, 24, 24);
+    color: aliceblue;
+    padding: 100px;
+}
+
 canvas {
     width: 100%;
     height: 100%;
@@ -21,7 +27,7 @@ canvas {
     /* margin-top: 51.25; */
 }
 
-main>div>section>div {
+main>div>#home-section>div {
     text-align: center;
     position: relative;
 }
@@ -32,4 +38,10 @@ main>div>section>div>h1 {
     left: 50%;
     transform: translate(-50%, -50%);
 
+}
+
+main>div>#about-section>div>div>div>img {
+    width: 150%;
+    border-radius: 10px;
+    /* height: 60%; */
 }
