--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ html, body {
     padding: 100px;
 }
 
+#projects-section {
+    background-color: rgb(48, 48, 48);
+    color: aliceblue;
+    padding: 100px;
+}
+
 canvas {
     width: 100%;
     height: 100%;
@@ -44,4 +50,9 @@ main>div>#about-section>div>div>div>img {
     width: 150%;
     border-radius: 10px;
     /* height: 60%; */
+}
+
+#projects-section>div>div>div>a>img {
+    width: 130%;
+    border-radius: 10px;
 }
