--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ html, body {
 canvas {
     width: 100%;
     height: 100%;
-    margin-bottom: 125px;
+    margin-bottom: 116px;
+    margin-top: 116px;
     /* margin-top: 51.25; */
 }
 
@@ -53,6 +54,31 @@ main>div>#about-section>div>div>div>img {
 }
 
 #projects-section>div>div>div>a>img {
-    width: 130%;
+    width: 100%;
     border-radius: 10px;
+    margin-top: 20px;
 }
+
+#projects-section>div>div>h1 {
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+  }
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
