--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
-html, body {
+html,
+body {
     margin: 0;
-    height:100%;
-    width:100%;
-    padding:0;
+    height: 100%;
+    width: 100%;
+    padding: 0;
 }
 
 #home-section {
     background-color: black;
     display: block;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     padding: 100px;
     /* padding-left: 120px; */
 }
@@ -24,6 +25,14 @@ html, body {
     background-color: rgb(48, 48, 48);
     color: aliceblue;
     padding: 100px;
+}
+
+#contact-section {
+    background-color: rgb(24, 24, 24);
+}
+
+footer {
+    background-color: black;
 }
 
 canvas {
@@ -66,19 +75,19 @@ main>div>#about-section>div>div>div>img {
 }
 
 .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
+    padding: 1  0px;
+    font-size: 30px;
+    width: 50%;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
 }
 
 .fa:hover {
     opacity: 0.7;
-  }
-
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
 }
 
+.fa-twitter {
+    /* background: #55ACEE; */
+    color: white;
+}
