--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,13 @@ body {
 
 #contact-section {
     background-color: rgb(24, 24, 24);
+    color: aliceblue;
+    padding: 75px;
 }
 
 footer {
     background-color: black;
+    padding: 100px;
 }
 
 canvas {
@@ -75,7 +78,7 @@ main>div>#about-section>div>div>div>img {
 }
 
 .fa {
-    padding: 1  0px;
+    padding: 1 0px;
     font-size: 30px;
     width: 50%;
     border-radius: 30px;
