--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
     right: 16px;
 }
 
+a {
+    text-decoration: none;
+    color: rgb(179, 175, 175);
+}
+
 @media only screen and (max-width: 600px) {
     .bottomright {
         color: rgb(179, 175, 175);
