--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,10 @@ a {
         /* padding-top: -20px; */
         text-align: center;
     }
+
+    a {
+        text-decoration: none;
+        color: rgb(179, 175, 175);
+        font-family: 'Oswald', sans-serif;
+    }
 }
