--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,19 @@ body {
 }
 
 #about-section {
-    background-color: rgb(14, 14, 14);
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
     padding: 100px;
 }
 
 #projects-section {
-    background-color: rgb(24, 24, 24);
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
     padding: 100px;
 }
 
 #contact-section {
-    background-color: rgb(14, 14, 14);
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
     padding: 75px;
 }
@@ -85,11 +85,25 @@ main>div>#about-section>div>div>div>img {
 
 .centered {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    visibility: hidden;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* visibility: hidden; */
+    margin-top: 20px;
+    /* margin-left: 100px; */
     transform: translate(-50%, -50%);
 
+}
+.centeredLeft {
+    left: 27%;
+    position: absolute;
+}
+
+.centeredCenter {
+    left: 50%;
+}
+
+.centeredRight {
+    left: 73%;
 }
 
 .centered:hover+projects-section>div>div>div {
