--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ main>div>#about-section>div>div>div>img {
 
 #projects-section>div>div>div>a>img {
     width: 100%;
+    height: 300px;
     position: relative;
     border-radius: 10px;
     margin-top: 20px;
@@ -131,5 +132,19 @@ main>div>#about-section>div>div>div>img {
 
 .fa-twitter {
     /* background: #55ACEE; */
+    color: white;
+}
+
+.btn {
+    margin-top: 80px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    background-color: white;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background-color: rgb(0, 0, 0);
     color: white;
 }
