--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ main>div>#about-section>div>div>div>img {
 
 #projects-section>div>div>div>a>img {
     width: 100%;
-    height: 300px;
+    height: auto;
     position: relative;
     border-radius: 10px;
     margin-top: 20px;
