--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,12 @@ main>div>#about-section>div>div>div>img {
     position: relative;
     border-radius: 10px;
     margin-top: 20px;
+    margin-right: 20px;
+    transition: 0.2s;
+}
+
+#projects-section>div>div>div>a>img:hover {
+    opacity: 0.5;
 }
 
 #projects-section>div>div>h1 {
@@ -88,8 +94,8 @@ main>div>#about-section>div>div>div>img {
     position: absolute;
     /* top: 50%; */
     /* left: 50%; */
-    /* visibility: hidden; */
-    margin-top: 20px;
+    visibility: none;
+    /* margin-top: 20px; */
     /* margin-left: 100px; */
     transform: translate(-50%, -50%);
 
@@ -107,8 +113,8 @@ main>div>#about-section>div>div>div>img {
     left: 73%;
 }
 
-.centered:hover+projects-section>div>div>div {
-    visibility: visible;
+.centered:hover {
+    display: block;
 }
 
 #contact-section>div>div>h1 {
