--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ main>div>section>div>h1 {
 }
 
 main>div>#about-section>div>div>div>img {
-    width: 150%;
+    width: 100%;
     border-radius: 10px;
     /* height: 60%; */
 }
@@ -76,7 +76,7 @@ main>div>#about-section>div>div>div>img {
     position: relative;
     border-radius: 5px;
     margin-top: 20px;
-    margin-right: 20px;
+    margin-right: 10px;
     transition: 0.2s;
 }
 
@@ -141,21 +141,18 @@ main>div>#about-section>div>div>div>img {
 }
 
 .contactInfo>label {
-    color: rgb(36, 36, 36);
+    color: rgb(150, 148, 148);
 }
 
-.fa {
+/* .fa {
     padding: 1 0px;
     font-size: 30px;
     width: 50%;
     border-radius: 30px;
     text-align: center;
     text-decoration: none;
-}
+} */
 
-.fa:hover {
-    opacity: 0.7;
-}
 
 .fa-twitter {
     /* background: #55ACEE; */
@@ -176,20 +173,12 @@ main>div>#about-section>div>div>div>img {
     color: white;
 }
 
-.wai {
+/* .wai {
     width: 40%;
     height: auto !important;
-}
+} */
 
-.wrapper {
-    perspective: 15px;
-}
 
-#tiltable {
-    height: 400px;
-    transition: transform 0.5s;
-    backface-visibility: hidden;
-}
 
 .skillbar-container {
     position: relative;
@@ -209,26 +198,75 @@ main>div>#about-section>div>div>div>img {
     width: 0px;
 }
 
-.skillbarText{
-    margin-right: 220px;
+.text-left {
+    padding: 50px 50px;
+}
+
+.skillbarText {
+    text-align: left;
+    font-size: 16px;
+}
+
+@media (hover: hover){
+    #tiltable {
+        height: 400px;
+        transition: transform 0.5s;
+        backface-visibility: hidden;
+    }
 }
 
 @media only screen and (max-width: 576px) {
+    a {
+        text-decoration: none;
+    }
+
+    canvas {
+        width: 100%;
+        height: 200%;
+        margin-bottom: 116px;
+        margin-top: 116px;
+        /* margin-top: 51.25; */
+    }
+
     #about-section {
         color: aliceblue;
         padding: 30px;
+        text-align: center;
     }
 
     main>div>#about-section>div>div>div>img {
-        width: 270%;
+        width: 100%;
         border-radius: 10px;
         margin-top: 50px;
-        /* height: 60%; */
+        margin-right: 20px;
+    }
+
+    .wai {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .skill-bartext {
+        margin-bottom: 50px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
     }
 
     #skills-section>div>h1 {
-        text-align: center;
+        /* text-align: center; */
         margin-top: 150px;
+
+    }
+
+    #skill-bar-wrapper {
+        font-size: 18px;
+        color: #fff;
+    }
+
+    .text-left {
+        margin-top: 50px;
+        padding-right: 35px;
+        padding-left: 35px;
     }
 
     #projects-section {
@@ -247,11 +285,42 @@ main>div>#about-section>div>div>div>img {
 
     }
 
+    .btn-contact {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
+
     #projects-section>div>div>div>a>img {
         width: 100%;
         height: auto;
         position: relative;
         margin-top: 20px;
+    }
+
+    .contactInfo {
+        margin-top: 50px;
+        padding-left: 0px;
+    }
+
+    #contact-section>div>div>h1 {
+        margin-bottom: 30px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    footer {
+        height: 200px;
+    }
+
+    .iconSocial {
+        padding-left: 0px !important;
+    }
+
+    .fa-brands {
+        /* margin-left: 5px; */
+        margin-right: 5px;
+        /* width: 20px;
+        height: auto; */
     }
 }
 
