--- a/css/style.css
+++ b/css/style.css
@@ -144,21 +144,6 @@ main>div>#about-section>div>div>div>img {
     color: rgb(150, 148, 148);
 }
 
-/* .fa {
-    padding: 1 0px;
-    font-size: 30px;
-    width: 50%;
-    border-radius: 30px;
-    text-align: center;
-    text-decoration: none;
-} */
-
-
-.fa-twitter {
-    /* background: #55ACEE; */
-    color: white;
-}
-
 .btnCenter {
     margin-top: 80px;
     transform: translate(-50%, -50%);
@@ -172,13 +157,6 @@ main>div>#about-section>div>div>div>img {
     background-color: rgb(0, 0, 0);
     color: white;
 }
-
-/* .wai {
-    width: 40%;
-    height: auto !important;
-} */
-
-
 
 .skillbar-container {
     position: relative;
@@ -225,7 +203,6 @@ main>div>#about-section>div>div>div>img {
         height: 200%;
         margin-bottom: 116px;
         margin-top: 116px;
-        /* margin-top: 51.25; */
     }
 
     #home-section {
@@ -238,18 +215,9 @@ main>div>#about-section>div>div>div>img {
         text-align: center;
         color: white;
         margin-top: 150px;
-        /* padding-bottom: 150px; */
-        /* margin-bottom: 200px; */
-        /* position: relative; */
     }
 
     main>div>section>div>h1 {
-        /* position: absolute; */
-        /* top: 50%;
-        left: 50%; */
-        /* margin-bottom: 200px; */
-        /* transform: translate(-50%, -50%); */
-        /* padding-bottom: 50px; */
         text-decoration: none;
         margin-top: 250px;
         margin-bottom: 150px;
@@ -268,7 +236,15 @@ main>div>#about-section>div>div>div>img {
         color: aliceblue;
         padding: 30px;
         text-align: center;
-        /* margin-top: 100px; */
+    }
+
+    #about-section>div>div>div>ul {
+        margin-left: -25px;
+    }
+
+    .listSpan {
+        font-weight: bold;
+        color: green;
     }
 
     main>div>#about-section>div>div>div>img {
@@ -276,6 +252,11 @@ main>div>#about-section>div>div>div>img {
         border-radius: 10px;
         margin-top: 50px;
         margin-right: 20px;
+    }
+
+    #about-section>div>div>div>p>span {
+        font-weight: bold;
+        /* color: rgb(99, 187, 143); */
     }
 
     .wai {
@@ -290,9 +271,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #skills-section>div>h1 {
-        /* text-align: center; */
         margin-top: 150px;
-
     }
 
     #skill-bar-wrapper {
@@ -352,14 +331,15 @@ main>div>#about-section>div>div>div>img {
 
     .iconSocial {
         padding-left: 0px !important;
+        text-align: center !important;
     }
 
     .fa-brands {
-        /* margin-left: 5px; */
-        margin-right: 5px;
-        /* width: 20px;
-        height: auto; */
+        color: white;
+        margin: 5px;
     }
+
+
 }
 
 @media only screen and (min-width: 576px) {}
