--- a/css/style.css
+++ b/css/style.css
@@ -198,17 +198,11 @@ main>div>#about-section>div>div>div>img {
         text-decoration: none;
     }
 
-    canvas {
-        width: 100%;
-        height: 200%;
-        margin-bottom: 116px;
-        margin-top: 116px;
-    }
-
     #home-section {
         padding: 0px;
         margin-top: 100px;
-        margin-bottom: 100px;
+        padding-top: 60px;
+        margin-bottom: 700px;
     }
 
     main>div>#home-section>div {
@@ -218,7 +212,6 @@ main>div>#about-section>div>div>div>img {
     }
 
     main>div>section>div>h1 {
-        text-decoration: none;
         margin-top: 250px;
         margin-bottom: 150px;
         text-align: center;
@@ -298,12 +291,12 @@ main>div>#about-section>div>div>div>img {
         margin-bottom: 50px;
         margin-top: 50px;
         font-family: 'Sarabun', sans-serif;
-
     }
 
-    .btn-contact {
-        margin-top: 20px;
-        margin-bottom: 50px;
+    #projects-section>div>div>div>p {
+        text-align: center;
+        font-size: 1.1em;
+        font-family: 'Sarabun', sans-serif;
     }
 
     #projects-section>div>div>div>a>img {
@@ -311,6 +304,11 @@ main>div>#about-section>div>div>div>img {
         height: auto;
         position: relative;
         margin-top: 20px;
+    }
+
+    .btn-contact {
+        margin-top: 20px;
+        margin-bottom: 50px;
     }
 
     .contactInfo {
@@ -336,6 +334,7 @@ main>div>#about-section>div>div>div>img {
 
     .fa-brands {
         color: white;
+        padding-top: 30px;
         margin: 5px;
     }
 
