--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     background-color: black;
 }
 
+a {
+    text-decoration: none;
+}
+
 #home-section {
     /* display: block; */
     /* height: 100%;
@@ -194,9 +198,6 @@ main>div>#about-section>div>div>div>img {
 }
 
 @media only screen and (max-width: 576px) {
-    a {
-        text-decoration: none;
-    }
 
     #home-section {
         padding: 0px;
@@ -341,7 +342,147 @@ main>div>#about-section>div>div>div>img {
 
 }
 
-@media only screen and (min-width: 576px) {}
+@media only screen and (min-width: 576px) {
+    #home-section {
+        padding: 0px;
+        margin-top: 5px;
+        padding-top: 10px;
+        margin-bottom: 50px;
+    }
+
+    main>div>#home-section>div {
+        text-align: center;
+        color: white;
+        margin-top: 150px;
+    }
+
+    main>div>section>div>h1 {
+        margin-top: 50px;
+        margin-bottom: 200px;
+        text-align: center;
+    }
+
+    .typewrite {
+        color: white;
+    }
+
+    #home-section>.container>img {
+       display: none;
+    }
+
+    #about-section {
+        color: aliceblue;
+        padding: 30px;
+        text-align: center;
+    }
+
+    #about-section>div>div>div>ul {
+        margin-left: -25px;
+    }
+
+    .listSpan {
+        font-weight: bold;
+        color: green;
+    }
+
+    main>div>#about-section>div>div>div>img {
+        width: 100%;
+        border-radius: 10px;
+        margin-top: 50px;
+        margin-right: 20px;
+    }
+
+    #about-section>div>div>div>p>span {
+        font-weight: bold;
+        /* color: rgb(99, 187, 143); */
+    }
+
+    .wai {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .skill-bartext {
+        margin-bottom: 50px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #skills-section>div>h1 {
+        margin-top: 150px;
+    }
+
+    #skill-bar-wrapper {
+        font-size: 18px;
+        color: #fff;
+    }
+
+    .text-left {
+        margin-top: 50px;
+        padding-right: 35px;
+        padding-left: 35px;
+    }
+
+    #projects-section {
+        color: aliceblue;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 0px !important;
+        margin-top: 50px;
+    }
+
+    #projects-section>div>div>h1 {
+        text-align: center;
+        margin-bottom: 50px;
+        margin-top: 50px;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #projects-section>div>div>div>p {
+        text-align: center;
+        font-size: 1.1em;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #projects-section>div>div>div>a>img {
+        width: 100%;
+        height: auto;
+        position: relative;
+        margin-top: 20px;
+    }
+
+    .btn-contact {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
+
+    .contactInfo {
+        margin-top: 50px;
+        padding-left: 0px;
+        display: none;
+    }
+
+    #contact-section>div>div>h1 {
+        margin-bottom: 30px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    footer {
+        height: 200px;
+    }
+
+    .iconSocial {
+        padding-left: 0px !important;
+        text-align: center !important;
+    }
+
+    .fa-brands {
+        color: white;
+        padding-top: 30px;
+        margin: 5px;
+    }
+}
 
 @media only screen and (min-width: 768px) {}
 
