--- a/css/style.css
+++ b/css/style.css
@@ -752,10 +752,9 @@ main>div>#about-section>div>div>div>img {
     }
 
     .contactInfo {
-        margin-top: 50px;
-        padding-left: 0px;
+        margin-top: 5px;
         display: block;
-        padding-left: 200px;
+        padding-left: 100px;
     }
 
     #contact-section>div>div>h1 {
@@ -780,6 +779,300 @@ main>div>#about-section>div>div>div>img {
     }
 }
 
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+    #home-section {
+        padding: 0px;
+        margin-top: 100px;
+        padding-top: 60px;
+        margin-bottom: 900px;
+    }
 
-@media only screen and (max-width: 1400px) {}
+    main>div>#home-section>div {
+        text-align: center;
+        color: white;
+        margin-top: 150px;
+    }
+
+    main>div>section>div>h1 {
+        margin-top: 250px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .typewrite {
+        color: white;
+    }
+
+    #home-section>.container>img {
+       display: none;
+    }
+
+    #about-section {
+        color: aliceblue;
+        padding: 30px;
+        text-align: center;
+    }
+
+    #about-section>div>div>div>ul {
+        margin-left: -25px;
+    }
+
+    .listSpan {
+        font-weight: bold;
+        color: green;
+    }
+
+    main>div>#about-section>div>div>div>img {
+        width: 100%;
+        border-radius: 10px;
+        margin-top: 70px;
+        margin-right: 20px;
+    }
+
+    #about-section>div>div>div>p>span {
+        font-weight: bold;
+        /* color: rgb(99, 187, 143); */
+    }
+
+    .wai {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .skill-bartext {
+        margin-bottom: 50px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #skills-section>div>h1 {
+        margin-top: 150px;
+    }
+
+    #skill-bar-wrapper {
+        font-size: 18px;
+        color: #fff;
+    }
+
+    .text-left {
+        margin-top: 50px;
+        padding-right: 35px;
+        padding-left: 35px;
+    }
+
+    #projects-section {
+        color: aliceblue;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 0px !important;
+        margin-top: 50px;
+    }
+
+    #projects-section>div>div>h1 {
+        text-align: center;
+        margin-bottom: 50px;
+        margin-top: 50px;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #projects-section>div>div>div>p {
+        text-align: center;
+        font-size: 1.1em;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #projects-section>div>div>div>a>img {
+        width: 100%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        position: relative;
+        margin-top: 20px;
+    }
+
+    .btn-contact {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
+
+    form {
+        width: 50%;
+    }
+
+    .contactInfo {
+        margin-top: 5px;
+        display: block;
+        padding-left: 100px;
+    }
+
+    #contact-section>div>div>h1 {
+        margin-bottom: 30px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    footer {
+        height: 200px;
+    }
+
+    .iconSocial {
+        padding-left: 0px !important;
+        text-align: center !important;
+    }
+
+    .fa-brands {
+        color: white;
+        padding-top: 30px;
+        margin: 30px;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    #home-section {
+        padding: 0px;
+        margin-top: 100px;
+        padding-top: 60px;
+        margin-bottom: 900px;
+    }
+
+    main>div>#home-section>div {
+        text-align: center;
+        color: white;
+        margin-top: 150px;
+    }
+
+    main>div>section>div>h1 {
+        margin-top: 250px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .typewrite {
+        color: white;
+    }
+
+    #home-section>.container>img {
+       display: none;
+    }
+
+    #about-section {
+        color: aliceblue;
+        padding: 30px;
+        text-align: center;
+    }
+
+    #about-section>div>div>div>ul {
+        margin-left: -25px;
+    }
+
+    .listSpan {
+        font-weight: bold;
+        color: green;
+    }
+
+    main>div>#about-section>div>div>div>img {
+        width: 100%;
+        border-radius: 10px;
+        margin-top: 70px;
+        margin-right: 20px;
+    }
+
+    #about-section>div>div>div>p>span {
+        font-weight: bold;
+        /* color: rgb(99, 187, 143); */
+    }
+
+    .wai {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .skill-bartext {
+        margin-bottom: 50px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #skills-section>div>h1 {
+        margin-top: 150px;
+    }
+
+    #skill-bar-wrapper {
+        font-size: 18px;
+        color: #fff;
+    }
+
+    .text-left {
+        margin-top: 50px;
+        padding-right: 35px;
+        padding-left: 35px;
+    }
+
+    #projects-section {
+        color: aliceblue;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 0px !important;
+        margin-top: 50px;
+    }
+
+    #projects-section>div>div>h1 {
+        text-align: center;
+        margin-bottom: 50px;
+        margin-top: 50px;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #projects-section>div>div>div>p {
+        text-align: center;
+        font-size: 1.1em;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    #projects-section>div>div>div>a>img {
+        width: 100%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        position: relative;
+        margin-top: 20px;
+    }
+
+    .btn-contact {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
+
+    form {
+        width: 50%;
+    }
+
+    .contactInfo {
+        margin-top: 5px;
+        display: block;
+        padding-left: 100px;
+    }
+
+    #contact-section>div>div>h1 {
+        margin-bottom: 30px;
+        text-align: center;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    footer {
+        height: 200px;
+    }
+
+    .iconSocial {
+        padding-left: 0px !important;
+        text-align: center !important;
+    }
+
+    .fa-brands {
+        color: white;
+        padding-top: 30px;
+        margin: 30px;
+    }
+}
