--- a/css/style.css
+++ b/css/style.css
@@ -190,12 +190,9 @@ main>div>#about-section>div>div>div>img {
     font-size: 16px;
 }
 
-@media (hover: hover){
-    #tiltable {
-        height: 400px;
-        transition: transform 0.5s;
-        backface-visibility: hidden;
-    }
+#tiltable {
+    transition: transform 0.5s;
+    backface-visibility: hidden;
 }
 
 @media only screen and (max-width: 576px) {
@@ -224,7 +221,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #home-section>.container>img {
-       display: none;
+        display: none;
     }
 
     #about-section {
@@ -304,6 +301,7 @@ main>div>#about-section>div>div>div>img {
     #projects-section>div>div>div>a>img {
         width: 100%;
         height: auto;
+        border-radius: 5px;
         position: relative;
         margin-top: 20px;
     }
@@ -340,6 +338,27 @@ main>div>#about-section>div>div>div>img {
         margin: 5px;
     }
 
+    .container>.row>.col-12>a>img {
+        width: 100%;
+        height: auto;
+        padding: 10px;
+        border-radius: 20px;
+        position: relative;
+        margin-top: 20px;
+    }
+    .container>.row>.col-12>p {
+        color: white;
+        text-align: center;
+    }
+    .container>.row>h1{
+        text-align: center;
+        color: white;
+        margin-top: 90px;
+        margin-bottom: 30px;
+    }
+    .container>.row>.col-12>a>img:hover{
+        opacity: 0.5;
+    }
 
 }
 
@@ -368,7 +387,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #home-section>.container>img {
-       display: none;
+        display: none;
     }
 
     #about-section {
@@ -510,7 +529,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #home-section>.container>img {
-       display: none;
+        display: none;
     }
 
     #about-section {
@@ -655,7 +674,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #home-section>.container>img {
-       display: none;
+        display: none;
     }
 
     #about-section {
@@ -804,7 +823,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #home-section>.container>img {
-       display: none;
+        display: none;
     }
 
     #about-section {
@@ -928,7 +947,7 @@ main>div>#about-section>div>div>div>img {
     }
 }
 
-@media only screen and (max-width: 1400px) {
+@media only screen and (min-width: 1400px) {
     #home-section {
         padding: 0px;
         margin-top: 100px;
@@ -953,7 +972,7 @@ main>div>#about-section>div>div>div>img {
     }
 
     #home-section>.container>img {
-       display: none;
+        display: none;
     }
 
     #about-section {
