--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,8 @@ main>div>#about-section>div>div>div>img {
     backface-visibility: hidden;
 }
 
+
+
 @media only screen and (max-width: 576px) {
 
     #home-section {
@@ -202,6 +204,95 @@ main>div>#about-section>div>div>div>img {
         margin-top: 100px;
         padding-top: 60px;
         margin-bottom: 700px;
+    }
+
+    #section10 {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-top: 150px;
+    }
+
+    #section10::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 80%;
+        background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .8) 80%, rgba(0, 0, 0, .8) 100%);
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .8) 80%, rgba(0, 0, 0, .8) 100%);
+    }
+
+    #section10 a {
+        padding-top: 60px;
+    }
+
+    #section10 a span {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 30px;
+        height: 50px;
+        margin-left: -15px;
+        border: 2px solid #fff;
+        border-radius: 50px;
+        box-sizing: border-box;
+    }
+
+    #section10 a span::before {
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        content: '';
+        width: 6px;
+        height: 6px;
+        margin-left: -3px;
+        background-color: #fff;
+        border-radius: 100%;
+        -webkit-animation: sdb10 2s infinite;
+        animation: sdb10 2s infinite;
+        box-sizing: border-box;
+    }
+
+    @-webkit-keyframes sdb10 {
+        0% {
+            -webkit-transform: translate(0, 0);
+            opacity: 0;
+        }
+
+        40% {
+            opacity: 1;
+        }
+
+        80% {
+            -webkit-transform: translate(0, 20px);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 0;
+        }
+    }
+
+    @keyframes sdb10 {
+        0% {
+            transform: translate(0, 0);
+            opacity: 0;
+        }
+
+        40% {
+            opacity: 1;
+        }
+
+        80% {
+            transform: translate(0, 20px);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 0;
+        }
     }
 
     main>div>#home-section>div {
@@ -346,17 +437,29 @@ main>div>#about-section>div>div>div>img {
         position: relative;
         margin-top: 20px;
     }
+
     .container>.row>.col-12>p {
         color: white;
         text-align: center;
     }
-    .container>.row>h1{
+
+    .container>.row>h1 {
         text-align: center;
         color: white;
         margin-top: 90px;
         margin-bottom: 30px;
     }
-    .container>.row>.col-12>a>img:hover{
+
+    .container>.row>small {
+        text-align: center;
+        margin-top: -20px;
+        margin-bottom: 20px;
+        padding-left: 50px;
+        padding-right: 50px;
+        color: rgb(97, 96, 96);
+    }
+
+    .container>.row>.col-12>a>img:hover {
         opacity: 0.5;
     }
 
