--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,37 @@ main>div>#about-section>div>div>div>img {
     backface-visibility: hidden;
 }
 
+.appearRight {
+    transition: all 0.8s;
+    opacity: 0;
+    transform: translateX(40px);
+}
 
+.appearRight.inview {
+    opacity: 1;
+    transform: none;
+    transition-delay: 0.2s;
+}
+
+.appearLeft {
+    transition: all 0.8s;
+    opacity: 0;
+    transform: translateX(-40px);
+}
+
+.appearLeft.inview {
+    opacity: 1;
+    transform: none;
+    transition-delay: 0.3s;
+}
+
+/* .appear {
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    opacity: 0;
+    -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+} */
 
 @media only screen and (max-width: 576px) {
 
@@ -478,6 +508,16 @@ main>div>#about-section>div>div>div>img {
         background-color: rgba(0, 0, 0, 0.665);
     }
 
+    .projectName {
+        text-align: center;
+        color: #fff;
+        font-family: 'Sarabun', sans-serif;
+    }
+
+    .projectDescription{
+        text-align: left;
+    }
+
 }
 
 @media only screen and (min-width: 576px) {
@@ -502,6 +542,7 @@ main>div>#about-section>div>div>div>img {
 
     .typewrite {
         color: white;
+        font-weight: lighter;
     }
 
     #home-section>.container>img {
