--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,10 @@ form>.mb-3>label {
     color: white;
 }
 
+.message {
+    padding: 20px;
+}
+
 @media only screen and (max-width: 576px) {
 
     #home-section {
