Remove unused Angular modules, update home page layout and styles

--- a/TAOPortfolio/src/app/shared/pages/home/home.component.html
+++ b/TAOPortfolio/src/app/shared/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="home">
+  <div class="container">
+    <div class="row ">
+      <div class="col-6">
+        <button class="btn mx-auto">SWE</button>
+      </div>
+      <div class="col-6">
+        <button class="btn">Music</button>
+      </div>
+    </div>
+  </div>
+</div>
